# FFLv2-player

./: CMakeLists.txt
player/: CMakeLists.txt  main.cpp  player.cpp
player-android/: CMakeLists.txt
player-android/app/: build.gradle
player-android/app/src/main/java/demo/player/ffl/androidplayer/: MainActivity.java
player-android/app/src/main/java/ffl/player/: FFLPlayer.java
player-android/app/src/main/res/layout/: activity_main.xml
playerlib/: CMakeLists.txt  Player.cpp  Player.hpp  PlayerCore.cpp  PlayerCore.hpp  PlayerInterface.hpp  PlayerTrack.cpp  PlayerTrack.hpp
playerlib/android/: NativeFFLPlayer.cpp
playerlib/android/jni/: CMakeLists.txt  JNImain.cpp
