cmake_minimum_required(VERSION 3.4.1)


IF (WIN32)
    MESSAGE(STATUS "Now is windows")  
ELSEIF (IOS_PLATFORM)
    MESSAGE(STATUS "Now is ios systens.")
ELSEIF (APPLE)
    MESSAGE(STATUS "Now is Apple systens.")
ELSEIF (ANDROID)
    MESSAGE(STATUS "Now is Android os.")  
ELSEIF (UNIX)  
    MESSAGE(STATUS "Now is UNIX-like OS's. Including aPPLE os x  and CygWin")  
ENDIF () 



#  加载公用库 FFLv2
SET(CMAKE_MODULE_PATH  ${CMAKE_SOURCE_DIR}/../FFLv2-cmakemodule/ )
INCLUDE(${CMAKE_MODULE_PATH}FFLv2lib.cmake)

#INCLUDE_DIRECTORIES(${FFLV2_LIB_INCLUDE_PATH})
#LINK_DIRECTORIES(${FFLV2_LIB_LIB_PATH})

ADD_SUBDIRECTORY(playerlib)
IF (IOS_PLATFORM)
ELSEIF(ANDROID)
ELSE()
ADD_SUBDIRECTORY(player)
ENDIF()


